# GWOT_tutorial

./: .gitignore  pyproject.toml
data/color_data/embeddings/: embedding_neutyp_group1.npy  embedding_neutyp_group2.npy
data/color_data/matrices/: RDM_neutyp_group1.npy  RDM_neutyp_group2.npy
data/words_data/: words_relation_matrix.csv
scripts/: tutorial_THINGS.ipynb  tutorial_color.ipynb  utils.py
