[tool.poetry]
name = "first-year-seminar-2024"
version = "0.1.0"
description = ""
authors = ["Masafumi Oizumi <c-oizumi@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2.0.0"
matplotlib = "*"
scipy = "*"
scikit-learn = "*"
jupyter = "*"
pandas = "*"
seaborn = "*"

pot = "*"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
